--- a/calculator/static/calculator/css/styles.css
+++ b/calculator/static/calculator/css/styles.css
@@ -1,134 +1,11 @@
-/* Main */
-body {
-    max-width: 80%;
-    align: center;
-    margin: auto;
-}
-.total-values {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #F5F5F5;
-    padding: 12px 20px;
-    margin: 8px 0;
-
-}
-
-/* Calculator */
-
-
-input[type=number] {
-    width: 5%;
-    background-color: #F5F5F5;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #45a049;
-}
-form {
-    align: center;
-    background-color: #F5F5F5;
-}
-p {
-    background-color: #F5F5F5;
-}
-select {
-    max-width: 50%;
-}
-.calculator div  {
-      font-family: Arial, Helvetica, sans-serif;
-      background-color: #F5F5F5;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      box-sizing: border-box;
-}
-/* Menu style */
-.menu-btn {
-    background-color: #4CAF50;
-    min-width: 200px;
-    color: white;
-    padding: 16px 76px;
-    font-size: 15px;
-    text-align: center;
-    border: none;
-    display: inline-block
-}
-
-.menu-link {
-    color: white;
-    text-decoration: none;
-}
-
-.menu-btn:hover {background-color: #3e8e41;}
-
-/* Dropdown Button */
-.dropbtn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px 76px;
-    min-width: 200px;
-    font-size: 15px;
-    text-align: center;
-    border: none;
-    display: inline-block
-}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 300px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
+.btn {
     color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
+    background-color: #f0f0f0;
+    border: none;
 }
 
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
+.btn:hover {background-color: 	#808080;}
 
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {display: block;}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
-
-/* Table */
-.main_table {
-  font-family: Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  width: 70%;
-  table-align: center
-}
-
-.main_table td, .maintable th {
-  border: 1px solid #ddd;
-  padding: 8px;
-}
-.headers {
-    background-color: #4CAF50;
-    color: white;
-}
-tr:nth-child(even){background-color: #f2f2f2;}
-
-tr:hover {background-color: #ddd;}
-
-.main_table th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  background-color: #04AA6D;
-  color: white;
+form {
+    display: inline;
 }
