--- a/calculator/templates/calculator/base.html
+++ b/calculator/templates/calculator/base.html
@@ -1,39 +1,53 @@
-<!DOCTYPE html>
+<!doctype html>
 {% load static %}
 <html lang="en">
-<head>
-    <link type="text/css" href="{% static 'calculator/css/styles.css' %}" rel="stylesheet" />
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }}</title>
-</head>
-<body>
-<div class="main-menu" align="center">
-    {% block menu %}
-    {% for point in menu %}
-    {% if point.title == "Категории продуктов" %}
-        <div class="dropdown">
-          <button class="dropbtn">{{point.title}}</button>
-          <div class="dropdown-content">
-              {% for item in categories_list %}
-                <a href="{{ item.get_absolute_url }}">{{item.title}}</a>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="{% static 'calculator/css/styles.css' %}" rel="stylesheet">
+  </head>
+  <body>
+    {% block nav %}
+    <nav class="navbar navbar-expand-lg bg-body-tertiary container">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'home' %}">SimpleFoodCalculator</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+              {% for item in menu %}
+                {% if item.title == 'Категории продуктов | Таблицы' %}
+                    <div class="btn-group dropend">
+                          <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                            {{item.title}}
+                          </button>
+                        <ul class="dropdown-menu">
+                            {% for category in categories_list %}
+                                <li><a class="dropdown-item" href="{{ category.get_absolute_url }}">{{category.title}}</a></li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{% url item.path_name %}">{{item.title}}</a>
+                    </li>
+              {% endif %}
               {% endfor %}
-
-          </div>
+          </ul>
         </div>
-    {% else %}
-        {% if selected == point.select_id %}
-            <div class="menu-btn">{{point.title}}</div>
-        {% else %}
-            <div class="menu-btn"><a class="menu-link" href="{% url point.path_name %}">{{point.title}}</a></div>
-        {% endif %}
-    {% endif %}
-    {% endfor %}
-    {% endblock menu %}
-</div>
-
-
-{% block content %}
-
-{% endblock content %}
-</body>
+      </div>
+    </nav>
+    <br>
+    {% endblock nav %}
+    {% block about %}
+    <!--Short description-->
+    {% endblock about %}
+    {% block calculator %}
+    <!--Main content-->
+    {% endblock calculator %}
+  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </html>
